<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:src="@drawable/avatar_image_placeholder"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp" />

    <EditText
        android:id="@+id/nicknameEt"
        android:hint="Enter your nickname"
        android:background="@drawable/rounded_input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingHorizontal="16dp"
        android:layout_marginBottom="12dp" />

    <EditText
        android:id="@+id/passwordEt"
        android:hint="Enter your password"
        android:background="@drawable/rounded_input"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingHorizontal="16dp"
        android:layout_marginBottom="24dp" />

    <Button
        android:id="@+id/loginBtn"
        android:text="@string/sign_in"
        android:backgroundTint="#3D77FF"
        android:textColor="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp" />

    <TextView
        android:id="@+id/signupRedirect"
        android:text="@string/not_registered"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/signUpButton"
        android:text="@string/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/outline_button"
        android:textColor="#000000"
        android:layout_gravity="center"
        android:layout_marginTop="8dp" />
</LinearLayout>
